Sleep bench, reorder params, cleanup C# csproj (#37)
* start on sleep bench

* add sleep test

* use proper test path....

* use proper sleep names

* update cpp bench

* update c bench

* fix c# bench

* fix c# more

* sleep properly in java

* test javascript sleep

* reorder params to test

* sleep time for 5

* correct test for empty

* rework folder etc

* Update sleep.sh

* more vars used

* reorder stuff

* change parameters order

* reorder more

* more reordering

* Update nbody.sh

* remove all sln files and fix up C# to be normalized

* Changed js sleep

---------

Co-authored-by: Villiam <Vjacob19@student.aau.dk>